--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@types/node": "10.12.20",
     "@types/react": "16.7.22",
     "@types/react-dom": "16.0.11",
+    "@types/uuid": "^3.4.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
-    "typescript": "3.2.4"
+    "typescript": "3.2.4",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
