--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "16.7.22",
     "@types/react-dom": "16.0.11",
     "@types/uuid": "^3.4.4",
+    "prettier": "^1.16.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
