--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "@types/react": "16.7.22",
     "@types/react-dom": "16.0.11",
     "@types/uuid": "^3.4.4",
-    "prettier": "^1.16.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
     "typescript": "3.2.4",
     "uuid": "^3.3.2"
   },
+  "devDependencies": {
+    "prettier": "^1.16.3"
+  },
   "scripts": {
     "start": "react-scripts start",
-    "now-build": "react-scripts build",
+    "now-build": "react-scripts build && mv build dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
