--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "23.3.13",
-    "@types/node": "10.12.20",
-    "@types/react": "16.7.22",
-    "@types/react-dom": "16.0.11",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^10.12.21",
+    "@types/react": "^16.8.2",
+    "@types/react-dom": "^16.8.0",
     "@types/uuid": "^3.4.4",
-    "react": "^16.7.0",
+    "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.3",
-    "typescript": "3.2.4",
+    "typescript": "^3.3.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "prettier": "^1.16.3"
+    "prettier": "^1.16.4"
   },
   "scripts": {
     "start": "react-scripts start",
