--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.2",
-    "@types/react": "^16.8.17",
-    "@types/react-dom": "^16.8.4",
-    "@types/uuid": "^3.4.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1",
-    "typescript": "^3.4.5",
-    "uuid": "^3.3.2"
+    "@reach/dialog": "^0.5.4",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.7",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
+    "@types/uuid": "^3.4.6",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
+    "react-scripts": "^3.2.0",
+    "typescript": "^3.7.2",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "prettier": "^1.17.1"
+    "prettier": "^1.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
