--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reach/dialog": "^0.5.4",
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.7",
+    "@reach/dialog": "^0.7.0",
+    "@reach/tabs": "^0.7.0",
+    "@types/jest": "^24.0.25",
+    "@types/node": "^13.1.4",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
     "@types/uuid": "^3.4.6",
-    "immer": "^5.0.0",
+    "immer": "^5.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
     "react-scripts": "^3.2.0",
-    "swr": "^0.1.12",
+    "swr": "^0.1.16",
     "typescript": "^3.7.2",
     "uuid": "^3.3.3"
   },
