--- a/package.json
+++ b/package.json
@@ -3,28 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reach/dialog": "^0.10.3",
-    "@reach/tabs": "^0.15.0",
-    "@types/jest": "^26.0.6",
-    "@types/node": "^14.0.24",
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8",
-    "@types/uuid": "^8.0.0",
+    "@reach/checkbox": "^0.16.0",
+    "@reach/dialog": "^0.16.2",
+    "@reach/tabs": "^0.16.1",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "cuid": "^2.1.8",
     "immer": "^9.0.2",
-    "next": "^10.2.3",
-    "react": "^16.14.0",
-    "react-dom": "^16.13.1",
-    "react-icons": "^4.2.0",
-    "swr": "^0.5.6",
-    "typescript": "^4.1.3",
-    "uuid": "^8.1.0"
+    "next": "^12.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "typescript": "^4.4.4"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^2.4.1"
   },
   "scripts": {
     "start": "next start",
-    "build": "next build",
+    "build": "next build && next export",
     "dev": "next dev"
   },
   "prettier": {
@@ -33,11 +31,5 @@
     "tabWidth": 2,
     "bracketSpacing": true,
     "jsxBracketSameLine": true
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  }
 }
