--- a/package.json
+++ b/package.json
@@ -3,24 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reach/dialog": "^0.10.3",
-    "@reach/tabs": "^0.15.0",
-    "@types/jest": "^26.0.6",
-    "@types/node": "^14.0.24",
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8",
-    "@types/uuid": "^8.0.0",
-    "immer": "^9.0.2",
-    "next": "^10.2.3",
-    "react": "^16.14.0",
-    "react-dom": "^16.13.1",
-    "react-icons": "^4.2.0",
-    "swr": "^0.5.6",
-    "typescript": "^4.1.3",
-    "uuid": "^8.1.0"
+    "@reach/dialog": "^0.17.0",
+    "@reach/tabs": "^0.17.0",
+    "@types/node": "^17.0.36",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
+    "cuid": "^2.1.8",
+    "immer": "^9.0.14",
+    "next": "^12.1.6",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
+    "typescript": "^4.7.2"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^2.6.2"
   },
   "scripts": {
     "start": "next start",
@@ -32,7 +29,7 @@
     "useTabs": false,
     "tabWidth": 2,
     "bracketSpacing": true,
-    "jsxBracketSameLine": true
+    "bracketSameLine": true
   },
   "browserslist": [
     ">0.2%",
