--- a/package.json
+++ b/package.json
@@ -1,45 +1,54 @@
 {
-  "name": "todo-list",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@reach/dialog": "^0.17.0",
-    "@reach/tabs": "^0.17.0",
-    "@types/node": "^17.0.36",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.5",
-    "cuid": "^2.1.8",
-    "immer": "^9.0.14",
-    "next": "^12.1.6",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-icons": "^4.3.1",
-    "typescript": "^4.7.2"
-  },
-  "devDependencies": {
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
-    "prettier": "^2.6.2"
-  },
-  "scripts": {
-    "start": "next start",
-    "build": "next build",
-    "dev": "next dev"
-  },
-  "prettier": {
-    "printWidth": 95,
-    "useTabs": false,
-    "tabWidth": 2,
-    "bracketSpacing": true,
-    "bracketSameLine": true
-  },
-  "eslintConfig": {
-    "extends": "next/core-web-vitals"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+	"name": "todo-list",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@headlessui/react": "^1.7.3",
+		"@reach/dialog": "^0.17.0",
+		"@reach/tabs": "^0.17.0",
+		"@types/node": "^18.8.2",
+		"@types/react": "^18.0.9",
+		"@types/react-dom": "^18.0.5",
+		"immer": "^9.0.15",
+		"next": "^12.3.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-icons": "^4.4.0",
+		"typescript": "^4.8.4"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.12",
+		"eslint": "8.24.0",
+		"eslint-config-next": "12.3.1",
+		"postcss": "^8.4.17",
+		"prettier": "^2.7.1",
+		"tailwindcss": "^3.1.8"
+	},
+	"scripts": {
+		"start": "next start",
+		"build": "next build",
+		"dev": "next dev"
+	},
+	"prettier": {
+		"printWidth": 95,
+		"useTabs": true,
+		"tabWidth": 2,
+		"bracketSpacing": true,
+		"bracketSameLine": true
+	},
+	"eslintConfig": {
+		"extends": "next/core-web-vitals"
+	},
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	],
+	"postcss": {
+		"plugins": {
+			"tailwindcss": {},
+			"autoprefixer": {}
+		}
+	}
 }
