--- a/package.json
+++ b/package.json
@@ -6,28 +6,28 @@
 		"@headlessui/react": "^1.7.3",
 		"@reach/dialog": "^0.17.0",
 		"@reach/tabs": "^0.17.0",
-		"@types/node": "^18.8.2",
-		"@types/react": "^18.0.9",
-		"@types/react-dom": "^18.0.5",
 		"immer": "^9.0.15",
-		"next": "^12.3.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.4.0",
 		"typescript": "^4.8.4"
 	},
 	"devDependencies": {
+		"@types/node": "^18.8.2",
+		"@types/react": "^18.0.9",
+		"@types/react-dom": "^18.0.5",
+		"@vitejs/plugin-react": "^2.1.0",
 		"autoprefixer": "^10.4.12",
-		"eslint": "8.24.0",
-		"eslint-config-next": "12.3.1",
 		"postcss": "^8.4.17",
 		"prettier": "^2.7.1",
-		"tailwindcss": "^3.1.8"
+		"tailwindcss": "^3.1.8",
+		"vite": "^3.1.0"
 	},
+	"type": "module",
 	"scripts": {
-		"start": "next start",
-		"build": "next build",
-		"dev": "next dev"
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
 	},
 	"prettier": {
 		"printWidth": 95,
@@ -35,9 +35,6 @@
 		"tabWidth": 2,
 		"bracketSpacing": true,
 		"bracketSameLine": true
-	},
-	"eslintConfig": {
-		"extends": "next/core-web-vitals"
 	},
 	"browserslist": [
 		">0.2%",
