--- a/package.json
+++ b/package.json
@@ -4,30 +4,35 @@
 	"private": true,
 	"dependencies": {
 		"@headlessui/react": "^1.7.3",
-		"@reach/dialog": "^0.17.0",
-		"@reach/tabs": "^0.17.0",
+		"@tailwindcss/forms": "^0.5.3",
 		"immer": "^9.0.15",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.4.0",
-		"typescript": "^4.8.4"
+		"react-icons": "^4.4.0"
 	},
 	"devDependencies": {
-		"@types/node": "^18.8.2",
-		"@types/react": "^18.0.9",
-		"@types/react-dom": "^18.0.5",
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^14.4.3",
+		"@types/node": "^18.8.3",
+		"@types/react": "^18.0.21",
+		"@types/react-dom": "^18.0.6",
 		"@vitejs/plugin-react": "^2.1.0",
 		"autoprefixer": "^10.4.12",
+		"jsdom": "^20.0.1",
 		"postcss": "^8.4.17",
 		"prettier": "^2.7.1",
 		"tailwindcss": "^3.1.8",
-		"vite": "^3.1.0"
+		"typescript": "^4.8.4",
+		"vite": "^3.1.0",
+		"vitest": "^0.23.4"
 	},
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "vitest"
 	},
 	"prettier": {
 		"printWidth": 95,
