--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install deps and build package
-        run: npm ci
+        run: yarn install
       - name: Build
-        run: npm run build
+        run: yarn build
       - name: Test
-        run: npm run test
+        run: yarn test
