--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@headlessui/react": "^1.7.3",
+		"@headlessui/react": "^1.7.14",
 		"@tailwindcss/forms": "^0.5.3",
 		"immer": "^10.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.4.0"
+		"react-icons": "^4.8.0"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.4.3",
-		"@types/node": "^18.8.3",
-		"@types/react": "^18.0.21",
-		"@types/react-dom": "^18.0.6",
+		"@types/node": "^18.16.0",
+		"@types/react": "^18.0.38",
+		"@types/react-dom": "^18.0.11",
 		"@vitejs/plugin-react": "^4.0.0",
 		"autoprefixer": "^10.4.12",
 		"jsdom": "^21.1.1",
-		"postcss": "^8.4.17",
+		"postcss": "^8.4.23",
 		"prettier": "^2.7.1",
-		"tailwindcss": "^3.1.8",
+		"tailwindcss": "^3.3.1",
 		"typescript": "^5.0.4",
 		"vite": "^4.3.1",
 		"vitest": "^0.30.1"
@@ -30,7 +30,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc && vite build",
+		"build": "tsc --noEmit --pretty && vite build",
 		"preview": "vite preview",
 		"test": "vitest"
 	},
